cloudflared-sidecar.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cloudflared-sidecar-app
  name: cloudflared-sidecar-service
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
  selector:
    app: cloudflared-sidecar-app
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: cloudflared-sidecar-app
  name: cloudflared-sidecar-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared-sidecar-app
  template:
    metadata:
      labels:
        app: cloudflared-sidecar-app
    spec:
      containers:
      - name: cloudflared-sidecar-httpbin-container
        image: kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
      - name: cloudflared-sidecar-tunnel-container
        image:  mw866/cloudflared:latest
        imagePullPolicy: IfNotPresent
        command: ["cloudflared", "tunnel"]
        args: ["--url", "http://127.0.0.1:80", "--hostname", "cloudflared-sidecar.chriswang.me", "--origincert", "/etc/cloudflared/cert.pem", "--no-autoupdate", "--lb-pool", "cloudflared-sidecar"]
        volumeMounts:
        - mountPath: /etc/cloudflared
          name: cloudflared-sidecar-tunnel-secret
          readOnly: true
      terminationGracePeriodSeconds: 60
      volumes:
      - name: cloudflared-sidecar-tunnel-secret
        secret:
          secretName: cloudflared-cert
---
